* Add in rotating hash map class.  This supports the idiom of      iterating over a large set of things and occasionally flushing      the hash table, but makes it easy to keep a recent and old set.
RotatingHashMap.hpp: New header, documentation inline.  Uses new-style
  file names.

rotating_hashmap.cpp: Test program for RotatingHashMap

HashMap.H: update remove to return true if something is removed.  Add
  constructor that lets you specify the target chain length.

HashTable.H: switch to using AssertBoost; update remove function to return
  true if something is removed.

include/Makefile.am: install new header

ConstantString.C: need LintelAssert here now

src/Makefile.am: new test program

hashtable.C: need LintelAssert here now, add casts to eliminate signedness 
  warnings.

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -23,6 +23,7 @@ nobase_include_HEADERS = \
 	Lintel/PThread.H \
 	Lintel/Posix.H \
 	Lintel/PriorityQueue.H \
+	Lintel/RotatingHashMap.hpp \
 	Lintel/Stats.H \
 	Lintel/StatsEMA.H \
 	Lintel/StatsHistogram.H \
