* Add NEWS file    * Add doxygen support for docs -- uses cmake as part of ongoing transition.
NEWS: new news file, as with DataSeries

doc/CMakeLists.txt: CMake file for building doxygen documentation

doxygen.config.in: configuration file that turns on man pages

install-doxygen.sh: script for installing the generated documentation; can't
  figure out how to do that in pure cmake, see doc/CMakeLists.txt for
  discussion.

Makefile.am: if we have cmake, add the all/install targets to get docs.

configure.ac: figure out if we have cmake, give big warning if it is missing.

--- a/Makefile.am
+++ b/Makefile.am
@@ -26,3 +26,13 @@ linteldoc_DATA = \
 # Sadly, we can't use this in other packages because the proper -I depends
 # on where we are installing.
 ACLOCAL_AUTORECONF_FLAGS = -I .
+
+if HAS_CMAKE
+all:
+	(cd doc; cmake -DCMAKE_INSTALL_PREFIX=$(prefix) $(top_srcdir)/doc)
+	(cd doc; make all)
+
+install:
+	(cd doc; make install)
+
+endif
