--- a/Makefile.am
+++ b/Makefile.am
@@ -29,6 +29,10 @@ ACLOCAL_AUTORECONF_FLAGS = -I .
 
 if HAS_CMAKE
 all: all-recursive
+	if [ \! -d include ]; then \
+		echo "Internal, missing include directory"; \
+		exit 1; \
+	fi
 	[ -d doc ] || mkdir doc
 	(cd doc && cmake -DCMAKE_INSTALL_PREFIX=$(prefix) $(top_srcdir)/doc)
 	(cd doc && make all)
