doc/CMakeLists.txt: Generate an message if we have nothing to install so we get an install target

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -28,4 +28,5 @@ IF (DOXYGEN_FOUND)
    INSTALL(CODE "EXEC_PROGRAM(${CMAKE_CURRENT_SOURCE_DIR}/install-doxygen.sh ARGS ${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_INSTALL_PREFIX}/share)")
 ELSE (DOXYGEN_FOUND)
    MESSAGE("WARNING: doxygen not found, unable to build documentation")
+   INSTALL(CODE "MESSAGE(\"Nothing to install\")")
 ENDIF (DOXYGEN_FOUND)
