--- a/redhat/Lintel.spec.in
+++ b/redhat/Lintel.spec.in
@@ -80,37 +80,7 @@ rm -rf $RPM_BUILD_ROOT
 %{_docdir}/Lintel-%{version}/Changelog.mtn
 
 %files devel
-%{_includedir}/Lintel/AssertBoost.H
-%{_includedir}/Lintel/AssertException.H
-%{_includedir}/Lintel/Clock.H
-%{_includedir}/Lintel/CompilerMarkup.H
-%{_includedir}/Lintel/ConstantString.H
-%{_includedir}/Lintel/Deque.H
-%{_includedir}/Lintel/Double.H
-%{_includedir}/Lintel/HashMap.H
-%{_includedir}/Lintel/HashTable.H
-%{_includedir}/Lintel/HashUnique.H
-%{_includedir}/Lintel/LeastSquares.hpp
-%{_includedir}/Lintel/LintelAssert.H
-%{_includedir}/Lintel/LintelVersion.H
-%{_includedir}/Lintel/MathSpecialFunctions.H
-%{_includedir}/Lintel/Matrix.H
-%{_includedir}/Lintel/MersenneTwisterRandom.H
-%{_includedir}/Lintel/PThread.H
-%{_includedir}/Lintel/Posix.H
-%{_includedir}/Lintel/PriorityQueue.H
-%{_includedir}/Lintel/Stats.H
-%{_includedir}/Lintel/StatsEMA.H
-%{_includedir}/Lintel/StatsHistogram.H
-%{_includedir}/Lintel/StatsMaker.H
-%{_includedir}/Lintel/StatsQuantile.H
-%{_includedir}/Lintel/StatsRW.H
-%{_includedir}/Lintel/StatsSequence.H
-%{_includedir}/Lintel/StatsSeries.H
-%{_includedir}/Lintel/StatsSeriesGroup.H
-%{_includedir}/Lintel/StringUtil.H
-%{_includedir}/Lintel/Uncompress.H
-%{_includedir}/Lintel/streamcompat.H
+%{_includedir}/Lintel/*
 /usr/share/aclocal/com_hp_hpl_lintel.m4
 %{_libdir}/Make.common
 %{_libdir}/Make.world
