* udpate tar batch-parallel module with more features
com_hp_hpl_lintel.m4: add some more cases to the optmode flags.

configure.ac: [BUGFIX] didn't seem to get the bit trying to make up an
  abs top srcdir to work with all the different autoreconfs.  Try again.

tar.pm: Add features for requiring and excluding files.  Rewrite documentation
  to be easier to understand.  Add in a bunch of additional internal checks.
  Properly write to a temporary destination file so failures will get 
  rebuilt.

--- a/configure.ac
+++ b/configure.ac
@@ -191,11 +191,16 @@ EXPAND_VARIABLE
 expanded_datadir=`expand_variable $datadir`
 AC_SUBST(expanded_datadir)
 
-if [ -z "$abs_top_srcdir" ]; then
-   case "$top_srcdir" in
-       /*) abs_top_srcdir="$top_srcdir" ;;
-       .*) abs_top_srcdir="`pwd`/$top_srcdir" ;;
-       *) echo "Internal '$top_srcdir'"; exit 1;;
+tmp_srcdir="$top_srcdir"
+if test -z "$tmp_srcdir"; then
+   tmp_srcdir="$srcdir"
+fi
+
+if test -z "$abs_top_srcdir"; then
+   case "$tmp_srcdir" in
+       /*) abs_top_srcdir="$tmp_srcdir" ;;
+       .*) abs_top_srcdir="`pwd`/$tmp_srcdir" ;;
+       *) echo "Internal '$tmp_srcdir'"; exit 1;;
    esac
 fi
 
