* Great big conversion to make all the include files as .hpp; introduce      compatibility .H files; we'll do one release with just the compat files,      then a release with a warning in.  Then one or more releases after that,      remove the old files.    * Also unified the include guards.      http://www.informit.com/guides/content.aspx?g=cplusplus&seqNum=185&rll=1      says that __* and _[A-Z]* are reserved, and almost all our include files      looked like one of those.  Went with LINTEL_HEADER_HPP to pick a      structure in parallel with the filenames.    * deprecate streamcompat.H by putting in a warning; this is old and should      just go away.    * Tested by building without fixing the .C files, and by building      DataSeries.
Makefile.am: all sorts of new installed files.

TclInterface.C: remove streamcompat.H usage

buildTcl.in: remove streamcompat.H usage

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -5,6 +5,37 @@
 #
 
 nobase_include_HEADERS = \
+	Lintel/AssertException.hpp \
+	Lintel/Clock.hpp \
+	Lintel/CompilerMarkup.hpp \
+	Lintel/ConstantString.hpp \
+	Lintel/Deque.hpp \
+	Lintel/Double.hpp \
+	Lintel/HashMap.hpp \
+	Lintel/HashTable.hpp \
+	Lintel/HashUnique.hpp \
+	Lintel/LeastSquares.hpp \
+	Lintel/LintelAssert.hpp \
+	Lintel/LintelVersion.hpp \
+	Lintel/MathSpecialFunctions.hpp \
+	Lintel/Matrix.hpp \
+	Lintel/MersenneTwisterRandom.hpp \
+	Lintel/PThread.hpp \
+	Lintel/Posix.hpp \
+	Lintel/PriorityQueue.hpp \
+	Lintel/RotatingHashMap.hpp \
+	Lintel/Stats.hpp \
+	Lintel/StatsEMA.hpp \
+	Lintel/StatsHistogram.hpp \
+	Lintel/StatsMaker.hpp \
+	Lintel/StatsQuantile.hpp \
+	Lintel/StatsRW.hpp \
+	Lintel/StatsSequence.hpp \
+	Lintel/StatsSeries.hpp \
+	Lintel/StatsSeriesGroup.hpp \
+	Lintel/StringUtil.hpp \
+	Lintel/Uncompress.hpp \
+	\
 	Lintel/AssertException.H \
 	Lintel/Clock.H \
 	Lintel/CompilerMarkup.H \
@@ -14,7 +45,6 @@ nobase_include_HEADERS = \
 	Lintel/HashMap.H \
 	Lintel/HashTable.H \
 	Lintel/HashUnique.H \
-	Lintel/LeastSquares.hpp \
 	Lintel/LintelAssert.H \
 	Lintel/LintelVersion.H \
 	Lintel/MathSpecialFunctions.H \
@@ -23,7 +53,6 @@ nobase_include_HEADERS = \
 	Lintel/PThread.H \
 	Lintel/Posix.H \
 	Lintel/PriorityQueue.H \
-	Lintel/RotatingHashMap.hpp \
 	Lintel/Stats.H \
 	Lintel/StatsEMA.H \
 	Lintel/StatsHistogram.H \
@@ -33,20 +62,25 @@ nobase_include_HEADERS = \
 	Lintel/StatsSequence.H \
 	Lintel/StatsSeries.H \
 	Lintel/StatsSeriesGroup.H \
-	Lintel/StringUtil.H \
 	Lintel/streamcompat.H \
+	Lintel/StringUtil.H \
 	Lintel/Uncompress.H 
 
 if ENABLE_STDIO64
-nobase_include_HEADERS += Lintel/stdio_64.H 
+nobase_include_HEADERS += Lintel/stdio_64.hpp Lintel/stdio_64.H
 endif
 
 if WITH_BOOST
-nobase_include_HEADERS += Lintel/AssertBoost.H
+nobase_include_HEADERS += Lintel/AssertBoost.hpp Lintel/AssertBoost.H
 endif
 
 if WITH_TCL
 nobase_include_HEADERS += \
+	Lintel/Nameable.hpp \
+	Lintel/Random.hpp \
+	Lintel/Randommwm.hpp \
+	Lintel/TclInterface.hpp \
+	\
 	Lintel/Nameable.H \
 	Lintel/Random.H \
 	Lintel/Randommwm.H \
@@ -55,9 +89,9 @@ endif
 
 if WITH_GC
 nobase_include_HEADERS +=
-	Lintel/GC_Alloc.H 
+	Lintel/GC_Alloc.hpp Lintel/GC_Alloc.H
 
-Lintel/GC_Alloc.H: make_gcalloc_h.pl
+Lintel/GC_Alloc.hpp: make_gcalloc_h.pl
 	[ -d Lintel ] || mkdir Lintel
 	perl $(srcdir)/make_gcalloc_h.pl >$@-new
 	mv $@-new $@
