--- a/src/buildTcl.in
+++ b/src/buildTcl.in
@@ -1052,8 +1052,9 @@ END {
     print "#include <stdlib.h>" >> outSource;
     print "#include <string.h>" >> outSource;
     print "#include <tcl.h>" >> outSource;
-    print "#include \"Lintel/streamcompat.H\"" >> outSource;
-    print "#include \"Lintel/TclInterface.H\"" >> outSource;
+    print "#include <iostream>" >> outSource;
+    print "#include <fstream>" >> outSource;
+    print "#include <Lintel/TclInterface.hpp>" >> outSource;
     for (i = 1; i < ARGC; i++) {
         printf("#include \"%s\"\n", ARGV[i]) >> outSource;
     }
