* Add checking in Clock class for frequency scaling and deal with it.
CMakeLists.txt: add dependencies on hpp and cpp files to building
  documentation.

Clock.hpp: add a few functions for dealing with frequency scaling 
  (allowUnsafeFrequencyScaling), fixup the documentation a lot so that
  it plays better with doxygen.

AssertBoost.cpp: Change how we test for recursion so that if someone throws
  an exception in a hook that we properly reset the recursion flag.

Clock.cpp: implement all of the frequency scaling checking; switch another
  file over to INVARIANT.

clock.cpp: need to allow for unsafe frequency scaling now in regression test.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -7,10 +7,17 @@ INCLUDE(FindDoxygen)
 IF (DOXYGEN_FOUND)
    CONFIGURE_FILE(doxygen.config.in ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config @ONLY)
 
+   FILE(GLOB_RECURSE DOXYGEN_DEP_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/../*.hpp)
+   FILE(GLOB_RECURSE DOXYGEN_DEP_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/../*.cpp)
+
+   MESSAGE("HOLA ${DOXYGEN_DEP_INCLUDES}")
    ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html/index.html
 	              COMMAND ${DOXYGEN_EXECUTABLE} 
 		   	      ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config
- 		      DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config)
+ 		      DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doxygen.config
+		              ${DOXYGEN_DEP_INCLUDES}
+			      ${DOXYGEN_DEP_SOURCES}
+                      )
 
    ADD_CUSTOM_TARGET(doc ALL 
 	  	     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/doxygen/html/index.html)
