--- a/Makefile.am-old
+++ b/Makefile.am-old
@@ -28,20 +28,19 @@ linteldoc_DATA = \
 ACLOCAL_AUTORECONF_FLAGS = -I .
 
 abs_top_srcdir = @abs_top_srcdir@
-if HAS_CMAKE
+
 all: all-recursive
-	if [ \! -d include ]; then \
+	if [ \! -d src ]; then \
 		echo "Internal, missing include directory"; \
 		exit 1; \
 	fi
+	[ -d include ] || mkdir include
 	[ -d doc ] || mkdir doc
 	(cd doc && cmake -DCMAKE_INSTALL_PREFIX=$(prefix) $(abs_top_srcdir)/doc)
 	(cd doc && make all)
 
 install: install-recursive
 	(cd doc && make install)
-
-endif
 
 rpm:
 	(cd $(top_srcdir); ./redhat/make-rpm.sh)
