* Bugfixes and extentions to get DataSeries building
CMakeConfig.txt: Provide option to build static libraries; move the
  PERL substitutions into LintelCMakeUtil.cmake

CMakeLists.txt: check that we have the minimum cmake version

cmake-modules/CMakeLists.txt: add FindCrypto, FindLZO, LintelFindLibrary
  cmake modules.

FindLintel.cmake: simplify to use the LintelFindLibrary macro

LintelCMakeUtil.cmake: remove the configure message, reformat to 4 character
  indent, add macro for finding a perl module (maybe big enough to separate
  out)

include/CMakeLists.txt: remove minimum version test (should have been in
  parent) add TODO.

BatchParallel/CMakeLists.txt: fix destination for files

src/CMakeLists.txt: support static build, properly link with thread 
  library in LintelPThread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@
 #
 # Main cmake control file
 
+# ELSEIF came with 2.4.4
+CMAKE_MINIMUM_REQUIRED(VERSION 2.4.4 FATAL_ERROR)
+
 PROJECT(Lintel)
 
 SET(LINTEL_VERSION 0.0)
