--- a/cmake-modules/CMakeLists.txt
+++ b/cmake-modules/CMakeLists.txt
@@ -1,7 +1,10 @@
 SET(CMAKE_MODULE_FILES
+	FindCrypto.cmake
 	FindLibXmlpp.cmake
 	FindLintel.cmake
+	FindLZO.cmake
 	LintelCMakeUtil.cmake
+	LintelFindLibrary.cmake
 )
 
 INSTALL(FILES ${CMAKE_MODULE_FILES}
