--- a/src/BatchParallel/CMakeLists.txt
+++ b/src/BatchParallel/CMakeLists.txt
@@ -14,4 +14,4 @@ SET(BATCH_PARALLEL_FILES
 )
 
 INSTALL(FILES ${BATCH_PARALLEL_FILES}
-	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/bp_modules)
+	DESTINATION ${CMAKE_INSTALL_PREFIX}/share/bp_modules/BatchParallel)
