--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,7 @@ SET(LIBLINTEL_SOURCES
 )
 
 SET(LINTEL_FEATURES boost)
+
 ################################## SUBDIRS
 
 ADD_SUBDIRECTORY(BatchParallel)
@@ -104,7 +105,7 @@ ENDIF(WITH_TCL)
 
 ################################## LIBRARY
 
-ADD_LIBRARY(Lintel ${LIBLINTEL_SOURCES})
+ADD_LIBRARY(Lintel ${LIBRARY_TYPE} ${LIBLINTEL_SOURCES})
 SET_TARGET_PROPERTIES(Lintel 
   PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
 
@@ -115,11 +116,11 @@ TARGET_LINK_LIBRARIES(Lintel ${TCL_LIBRARY})
 ENDIF(WITH_TCL)
 
 IF(WITH_THREADS)
-  ADD_LIBRARY(LintelPThread ${LIBLINTELPTHREAD_SOURCES})
+  ADD_LIBRARY(LintelPThread ${LIBRARY_TYPE} ${LIBLINTELPTHREAD_SOURCES})
   ADD_DEPENDENCIES(LintelPThread Lintel)
   SET_TARGET_PROPERTIES(LintelPThread
     PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
-  TARGET_LINK_LIBRARIES(LintelPThread Lintel)
+  TARGET_LINK_LIBRARIES(LintelPThread Lintel ${CMAKE_THREAD_LIBS_INIT})
 ENDIF(WITH_THREADS)
 
 ################################## INSTALL
