* (1) Fix to not actually require TCL to build.    * (2) Switch to the WITH_* options defaulting all to ON regardless of      whether the package is there so that if it's added, then it's found.
CMakeConfig.txt: (1), (2)

doc/CMakeLists.txt: move the FindDoxygen bit into CMakeConfig.txt

include/CMakeLists.txt: (2)

RotatingHashMap.hpp: add flushRotate() functions so that we can guarentee
  complete flushing when the rotating hash map supports more than two hash 
  maps.

src/CMakeLists.txt: (2)

src/tests/CMakeLists.txt: (2)

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -80,7 +80,7 @@ IF(ENABLE_STDIO64)
   SET(TRANSITIONAL_INCLUDE_FILES ${TRANSITIONAL_INCLUDE_FILES} Lintel/stdio_64.H)
 ENDIF(ENABLE_STDIO64)
 
-IF(WITH_TCL)
+IF(TCL_ENABLED)
   SET(INCLUDE_FILES ${INCLUDE_FILES} 
 	Lintel/Nameable.hpp
 	Lintel/Random.hpp
@@ -92,12 +92,12 @@ IF(WITH_TCL)
 	Lintel/Random.H
 	Lintel/Randommwm.H
 	Lintel/TclInterface.H)
-ENDIF(WITH_TCL)
+ENDIF(TCL_ENABLED)
 
-IF(WITH_THREADS)
+IF(THREADS_ENABLED)
   SET(INCLUDE_FILES ${INCLUDE_FILES} Lintel/PThread.hpp)
   SET(TRANSITIONAL_INCLUDE_FILES ${TRANSITIONAL_INCLUDE_FILES} Lintel/PThread.H)
-ENDIF(WITH_THREADS)
+ENDIF(THREADS_ENABLED)
   
 ################################## INSTALL
 
