--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -76,12 +76,12 @@ ENDIF(ENABLE_STDIO64)
 
 SET(LIBLINTEL_SOURCES ${LIBLINTEL_SOURCES} AssertBoost.cpp)
 
-IF(WITH_THREADS)
+IF(THREADS_ENABLED)
   LIST(APPEND LINTEL_FEATURES threads)
   SET(LIBLINTELPTHREAD_SOURCES PThread.cpp ClockPThread.cpp)
-ENDIF(WITH_THREADS)
+ENDIF(THREADS_ENABLED)
 
-IF(WITH_TCL)
+IF(TCL_ENABLED)
   LIST(APPEND LINTEL_FEATURES tcl)
   SET(TCL_HEADERS ${Lintel_SOURCE_DIR}/include/Lintel/Random.hpp)
   INCLUDE_DIRECTORIES(${TCL_INCLUDE_PATH})
@@ -101,7 +101,7 @@ IF(WITH_TCL)
 	Random.cpp
 	Randommwm.cpp
 	TclInterface.cpp)
-ENDIF(WITH_TCL)
+ENDIF(TCL_ENABLED)
 
 ################################## LIBRARY
 
@@ -111,17 +111,17 @@ SET_TARGET_PROPERTIES(Lintel
 
 ################################## CONDITIONAL LIBRARY
 
-IF(WITH_TCL) 
+IF(TCL_ENABLED) 
 TARGET_LINK_LIBRARIES(Lintel ${TCL_LIBRARY})
-ENDIF(WITH_TCL)
+ENDIF(TCL_ENABLED)
 
-IF(WITH_THREADS)
+IF(THREADS_ENABLED)
   ADD_LIBRARY(LintelPThread ${LIBRARY_TYPE} ${LIBLINTELPTHREAD_SOURCES})
   ADD_DEPENDENCIES(LintelPThread Lintel)
   SET_TARGET_PROPERTIES(LintelPThread
     PROPERTIES VERSION ${LINTEL_VERSION} SONAME ${LINTEL_ABI_VERSION})
   TARGET_LINK_LIBRARIES(LintelPThread Lintel ${CMAKE_THREAD_LIBS_INIT})
-ENDIF(WITH_THREADS)
+ENDIF(THREADS_ENABLED)
 
 ################################## INSTALL
 
@@ -135,6 +135,6 @@ LINTEL_INSTALL_CONFIG_PROGRAM(lintel-acinclude)
 LINTEL_INSTALL_CONFIG_FILE(redhat-rules 
 	${CMAKE_INSTALL_PREFIX}/share/packaging)
 
-IF(WITH_THREADS)
+IF(THREADS_ENABLED)
   INSTALL(TARGETS LintelPThread DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
-ENDIF(WITH_THREADS)
+ENDIF(THREADS_ENABLED)
