* Complete TODO of moving the include/CMakeLists.txt into include/Lintel;      fix the file paths to no longer have Lintel in them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ INCLUDE("cmake-modules/LintelCMakeUtil.cmake")
 
 ENABLE_TESTING()
 
-ADD_SUBDIRECTORY(include)
+ADD_SUBDIRECTORY(include/Lintel)
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(doc)
 ADD_SUBDIRECTORY(cmake-modules)
