* Finished conversion of LintelAssert to AssertBoost; verified by      temporarily putting a #error into LintelAssert.hpp.    * found a test that hasn't been enabled (stats_sequence), added it.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -24,6 +24,7 @@ LINTEL_SIMPLE_PROGRAM(check-Uncompress)
 
 LINTEL_SIMPLE_TEST(stats)
 LINTEL_SIMPLE_TEST(stats_quantile)
+LINTEL_SIMPLE_TEST(stats_sequence)
 LINTEL_SIMPLE_TEST(clock)
 LINTEL_SIMPLE_TEST(hashtable)
 LINTEL_SIMPLE_TEST(mersenneTwister)
