CMakeLists.txt: include the Boost include dirs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,9 @@
 
 INCLUDE_DIRECTORIES(
 	${Lintel_SOURCE_DIR}/include
-	${CMAKE_CURRENT_BINARY_DIR}/include)
+	${CMAKE_CURRENT_BINARY_DIR}/include
+	${Boost_INCLUDE_DIRS}
+	)
 
 ADD_DEFINITIONS(-DLIBLINTEL_VERSION="\\"${LINTEL_VERSION}\\"")
 
